@@ -18,6 +18,7 @@
 
 #include <QtCore/QObject>
 #include <QtCore/QTimer>
+#include <QtNetwork/QHostAddress>
 
 #include <sy/symcastsocket.h>
 
@@ -29,10 +30,12 @@ class SyClock : public QObject
  public:
   SyClock(QObject *parent=0);
   ~SyClock();
+  QHostAddress sourceAddress() const;
 
  signals:
   void sendRtp();
   void pllUpdated(double ratio,int offset);
+  void sourceAddressChanged(const QHostAddress &addr);
 
  private slots:
   void readyReadData();
@@ -40,6 +43,7 @@ class SyClock : public QObject
   void sendRtpData();
 
  private:
+  QHostAddress clock_source_address;
   SyMcastSocket *clock_socket;
   QTimer *clock_pll_timer;
   QTimer *clock_rtp_timer;
